IGNITE-25572 Configuration compatibility. Support Polymorphic configuration snapshot
Add node references to support polymorphic nodes.